--- a/JustJava/app/src/main/res/layout/activity_main.xml
+++ b/JustJava/app/src/main/res/layout/activity_main.xml
@@ -18,11 +18,46 @@
         android:text="quality"
         android:textColor="#000000"
         />
+    <Button
+        android:id="@+id/add_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="+"
+        android:onClick="addOrder"/>
+
+
+
     <TextView
         android:id="@+id/count_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
+
+        android:textColor="#000000"
+        />
+    <Button
+        android:id="@+id/reduce_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="-"
+        android:onClick="reduceOrder"
+        />
+
+
+    <TextView
+        android:id="@+id/price_tetxt_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="price"
+        android:textColor="#000000"
+        />
+    <TextView
+        android:id="@+id/pricecount_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="￥0"
         android:layout_marginTop="10dp"
         />
     <Button
