--- a/JustJava/app/src/main/res/layout/activity_main.xml
+++ b/JustJava/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,19 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     tools:context="exampleexample.testing.justjava.MainActivity">
+    <TextView
+        android:id="@+id/topping_tetxt_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="topping"
+        android:textColor="#000000"
+        />
 
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="勾选"
+        />
     <TextView
         android:id="@+id/quality_tetxt_view"
         android:layout_width="wrap_content"
@@ -18,32 +30,39 @@
         android:text="quality"
         android:textColor="#000000"
         />
-    <Button
-        android:id="@+id/add_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="+"
-        android:onClick="addOrder"/>
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    >
 
 
-
-    <TextView
-        android:id="@+id/count_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="0"
-
-        android:textColor="#000000"
-        />
     <Button
         android:id="@+id/reduce_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
         android:text="-"
         android:onClick="reduceOrder"
         />
+    <TextView
+        android:id="@+id/count_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:text="0"
+        android:textColor="#000000"
+        />
+    <Button
+        android:id="@+id/add_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:text="+"
+        android:onClick="addOrder"/>
+
+</LinearLayout>
+
 
 
     <TextView
@@ -57,15 +76,17 @@
         android:id="@+id/pricecount_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="￥0"
+        android:text="0"
         android:layout_marginTop="10dp"
         />
+    <!--  android:textAllCaps="false" 让button的文字保持原样，不会将小写的字母自动转化成大写 -->
     <Button
         android:id="@+id/count_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="order"
+        android:text="Order"
+        android:textAllCaps="false"
         android:onClick="submitOrder"
         />
 </LinearLayout>
