--- a/JustJava/app/src/main/res/layout/activity_main.xml
+++ b/JustJava/app/src/main/res/layout/activity_main.xml
@@ -1,92 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    tools:context="exampleexample.testing.justjava.MainActivity">
-    <TextView
-        android:id="@+id/topping_tetxt_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="topping"
-        android:textColor="#000000"
-        />
+    android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/activity_main"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:orientation="vertical"
+        tools:context="exampleexample.testing.justjava.MainActivity">
+        <EditText
+            android:id="@+id/edit_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="please input your name"
+            android:inputType="number"
+            android:imeOptions="actionNext"
 
-    <CheckBox
+            />
+        <TextView
+            android:id="@+id/topping_tetxt_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="topping"
+            android:textColor="#000000"
+            />
+        <CheckBox
+            android:id="@+id/checkbox_chocolate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="add chocolate"
+            />
+        <CheckBox
+            android:id="@+id/checkbox_milk"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="add milk"
+            />
+        <TextView
+            android:id="@+id/quality_tetxt_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="quality"
+            android:textColor="#000000"
+            />
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="勾选"
-        />
-    <TextView
-        android:id="@+id/quality_tetxt_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="quality"
-        android:textColor="#000000"
-        />
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    >
-
-
-    <Button
-        android:id="@+id/reduce_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:text="-"
-        android:onClick="reduceOrder"
-        />
-    <TextView
-        android:id="@+id/count_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:text="0"
-        android:textColor="#000000"
-        />
-    <Button
-        android:id="@+id/add_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:text="+"
-        android:onClick="addOrder"/>
-
-</LinearLayout>
+        android:orientation="horizontal"
+        >
 
 
+        <Button
+            android:id="@+id/reduce_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="-"
+            android:onClick="reduceOrder"
+            />
+        <TextView
+            android:id="@+id/count_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="1"
+            android:textColor="#000000"
+            />
+        <Button
+            android:id="@+id/add_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="+"
+            android:onClick="addOrder"/>
 
-    <TextView
-        android:id="@+id/price_tetxt_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="price"
-        android:textColor="#000000"
-        />
-    <TextView
-        android:id="@+id/pricecount_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="0"
-        android:layout_marginTop="10dp"
-        />
-    <!--  android:textAllCaps="false" 让button的文字保持原样，不会将小写的字母自动转化成大写 -->
-    <Button
-        android:id="@+id/count_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Order"
-        android:textAllCaps="false"
-        android:onClick="submitOrder"
-        />
-</LinearLayout>
+    </LinearLayout>
+        <TextView
+            android:id="@+id/price_tetxt_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="price"
+            android:textColor="#000000"
+            />
+        <TextView
+            android:id="@+id/pricecount_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:layout_marginTop="10dp"
+            />
+        <!--  android:textAllCaps="false" 让button的文字保持原样，不会将小写的字母自动转化成大写 -->
+        <Button
+            android:id="@+id/count_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Order"
+            android:textAllCaps="false"
+            android:onClick="submitOrder"
+            />
+        <!--启动系统相机button-->
+     <!--   <Button
+            android:id="@+id/photo_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="photo"
+            android:onClick="clickPhoto"
+            />-->
+    </LinearLayout>
+</ScrollView>
