--- a/yxyl/app/src/main/res/layout/activity_reset_password.xml
+++ b/yxyl/app/src/main/res/layout/activity_reset_password.xml
@@ -28,46 +28,33 @@
                 android:background="@drawable/top_round_corners_5dp"
                 >
                 <EditText
-                    android:id="@+id/moblie_number"
-                    android:layout_width="269dp"
-                    android:layout_height="match_parent"
-                    android:hint="请输入绑定或者注册的手机号"
-                    android:textColor="#FFFFFF"
-                    android:textColorHint="@color/colorCommon"
-                    android:textSize="16dp"
-                    android:paddingLeft="20dp"
-                    android:background="@null"
-                    android:maxLength="11"
-                    android:inputType="number"/>
+                    android:id="@+id/first_passnumber"
+                    style="@style/PassCommon"
+                    />
                 <ImageView
                     style="@style/DeltextbuttonCommon"/>
             </LinearLayout>
             <LinearLayout
                 style="@style/MylayoutCommon"
-                android:layout_marginTop="1dp"
                 android:background="@drawable/botton_round_corners_5dp"
+                android:layout_marginTop="1dp"
                 >
                 <EditText
-                    android:id="@+id/verfication_number"
-                    style="@style/CodeCommon"/>
-                <TextView
-                    android:layout_width="1dp"
-                    android:layout_height="18dp"
-                    android:background="@color/colorCommon"/>
-                <TextView
-                    android:layout_width="80dp"
-                    android:layout_height="wrap_content"
-                    android:text="获取验证码"
-                    android:layout_marginLeft="18dp"
-                    android:textColor="@color/colorCommon"
-                    android:textSize="16dp"/>
+                    android:id="@+id/second_passnumber"
+                    style="@style/PassCommon"
+                    android:hint="请再次输入密码"
+                    />
+                <ImageView
+                   style="@style/DeltextbuttonCommon"/>
             </LinearLayout>
 
+
             <Button
-                android:id="@+id/nextstep_botton"
+                android:id="@+id/sure_reset_botton"
                 style="@style/ButtonCommon"
-                android:text=" 下一步"
-                android:onClick="ReSetpassword"/>
+                android:text=" 确认重置"
+
+                />
         </LinearLayout>
 
     </LinearLayout>
