--- a/yxyl/app/src/main/res/layout/activity_register.xml
+++ b/yxyl/app/src/main/res/layout/activity_register.xml
@@ -24,87 +24,53 @@
         android:orientation="vertical"
         android:gravity="center_horizontal">
       <LinearLayout
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:background="@drawable/bottom_round_corners_5dp"
-          android:gravity="center_vertical"
-          android:orientation="horizontal"
+          style="@style/MylayoutCommon"
+          android:background="@drawable/top_round_corners_5dp"
+
           >
           <EditText
               android:id="@+id/moblie_number"
-              android:layout_width="305dp"
-              android:layout_height="50dp"
+              style="@style/PassCommon"
+              android:layout_width="269dp"
+              android:layout_height="match_parent"
               android:hint="请输入手机号"
-              android:textColor="#FFFFFF"
-              android:textColorHint="@color/colorCommon"
-              android:textSize="16dp"
               android:paddingLeft="20dp"
-              android:background="@null"
               android:maxLength="11"
               android:inputType="number"/>
           <ImageView
-              android:layout_width="17dp"
-              android:layout_height="17dp"
-              android:layout_marginRight="17dp"
-              android:background="#FF0E25D7"/>
+              android:id="@+id/delmobile_button"
+              style="@style/DeltextbuttonCommon"/>
       </LinearLayout>
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/MylayoutCommon"
             android:layout_marginTop="1dp"
             android:background="#69ad0a"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+            >
             <EditText
                 android:id="@+id/verfication_number"
-                android:layout_width="213dp"
-                android:layout_height="50dp"
-                android:hint="请输入验证码"
-                android:textColor="#FFFFFF"
-                android:textColorHint="@color/colorCommon"
-                android:textSize="16dp"
-                android:paddingLeft="18.5dp"
-                android:background="@null"
-                android:maxLength="4"
-                android:inputType="number"/>
+                style="@style/CodeCommon"
+                />
             <TextView
                 android:layout_width="1dp"
                 android:layout_height="18dp"
                 android:background="@color/colorCommon"/>
             <TextView
-                android:layout_width="100dp"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:text="获取验证码"
-                android:layout_marginLeft="25dp"
-                android:textColor="#FFFFFF"
+                android:layout_marginLeft="18dp"
+                android:textColor="@color/colorCommon"
                 android:textSize="16dp"/>
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bottom_round_corners_5dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
 
-        </LinearLayout>
+
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/MylayoutCommon"
             android:background="@drawable/botton_round_corners_5dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
             android:layout_marginTop="1dp">
             <EditText
                 android:id="@+id/password"
-                android:layout_width="305dp"
-                android:layout_height="50dp"
-                android:hint="请输入6-18位密码"
-                android:textColor="#FFFFFF"
-                android:textColorHint="@color/colorCommon"
-                android:textSize="16dp"
-                android:paddingLeft="20dp"
-                android:background="@null"
-                android:maxLength="18"
+                style="@style/PassCommon"
                 />
             <ImageView
                 android:layout_width="17dp"
@@ -113,14 +79,8 @@
                 android:background="#FF0E25D7"/>
         </LinearLayout>
         <Button
-            android:id="@+id/login_botton"
-            android:layout_width="339dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="15dp"
-            android:text=" 注 册"
-            android:textSize="18dp"
-            android:textColor="@color/colorCommon"
-            android:background="@drawable/button_round_corners_6dp"/>
+            style="@style/ButtonCommon"
+            android:text=" 注 册" />
     </LinearLayout>
 
     </LinearLayout>
