--- a/yxyl/app/src/main/res/layout/activity_forget_password.xml
+++ b/yxyl/app/src/main/res/layout/activity_forget_password.xml
@@ -12,6 +12,21 @@
         android:orientation="vertical"
         android:gravity="center_horizontal"
         >
+        <LinearLayout
+            style="@style/TitleCommon"
+            >
+            <ImageView
+                android:layout_marginLeft="12dp"
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:background="#303F9F"
+                />
+            <TextView
+                android:text="忘记密码？"
+                style="@style/TitleTextCommon"/>
+
+        </LinearLayout>
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="200dp"
