--- a/yxyl/app/src/main/res/layout/activity_login.xml
+++ b/yxyl/app/src/main/res/layout/activity_login.xml
@@ -9,13 +9,14 @@
     android:background="@color/colorCommon"
     >
 <LinearLayout
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_horizontal"
 
     >
+    <TextView
+        style="@style/TitleCommon"/>
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="200dp"
