--- a/yxyl/app/src/main/res/layout/activity_register.xml
+++ b/yxyl/app/src/main/res/layout/activity_register.xml
@@ -10,8 +10,24 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:gravity="center_horizontal"
-    >
+        android:gravity="center_horizontal">
+        <LinearLayout
+           style="@style/TitleCommon"
+            >
+            <ImageView
+                android:layout_marginLeft="12dp"
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:background="#303F9F"
+                />
+            <TextView
+                android:text="注册"
+                style="@style/TitleTextCommon"/>
+
+        </LinearLayout>
+
+
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="200dp"
