--- a/yxyl/app/src/main/res/layout/activity_reset_password.xml
+++ b/yxyl/app/src/main/res/layout/activity_reset_password.xml
@@ -12,20 +12,18 @@
         android:orientation="vertical"
         android:gravity="center_horizontal">
 
-        <LinearLayout
+        <RelativeLayout
             style="@style/TitleCommon"
             >
             <ImageView
-                android:layout_marginLeft="12dp"
-                android:layout_width="26dp"
-                android:layout_height="26dp"
-                android:background="#303F9F"
+                style="@style/CancelOrBackCommon"
+
                 />
             <TextView
                 android:text="重置密码"
                 style="@style/TitleTextCommon"/>
 
-        </LinearLayout>
+        </RelativeLayout>
 
         <ImageView
             android:layout_width="match_parent"
