--- a/yxyl/app/src/main/res/values/colors.xml
+++ b/yxyl/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorCommon">#89e00d</color>
+    <color name="colorMyLayoutCommon">#69ad0a</color>
+
 </resources>
