--- a/yxyl/app/src/main/res/values/title_styles.xml
+++ b/yxyl/app/src/main/res/values/title_styles.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--<item name="android:orientation">horizontal</item>-->
 <resources>
     <style name="TitleCommon">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">55dp</item>
         <item name="android:background">@color/colorCommon</item>
-        <item name="android:orientation">horizontal</item>
-        <item name="android:gravity">center_vertical</item>
+        <item name="android:layout_centerHorizontal">true</item>
     </style>
 </resources>
