--- a/yxyl/app/src/main/res/layout/activity_main.xml
+++ b/yxyl/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="yanxiu.com.yxyl.MainActivity">
-
+    android:layout_height="match_parent">
+    <LinearLayout
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="yanxiu.com.yxyl.MainActivity">
+    <!-- android:layout_width="match_parent"
+     android:layout_height="match_parent"
+     >-->
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="#FFFFFF"
+        app:popupTheme="@style/PopupOverlay" />
     <Button
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="确定"
         android:onClick="ToUse"
+
         />
 
-</android.support.constraint.ConstraintLayout>
+    </LinearLayout>
+</ScrollView>
