--- a/yxyl/app/src/main/res/layout/activity_commit_name.xml
+++ b/yxyl/app/src/main/res/layout/activity_commit_name.xml
@@ -16,10 +16,11 @@
             style="@style/TitleCommon"
             >
             <ImageView
+                android:id="@+id/backJoinclass"
                 style="@style/CancelOrBackCommon"
                 />
             <TextView
-                android:text="加入班级"
+                android:text="提交姓名"
                 style="@style/TitleTextCommon"/>
 
         </RelativeLayout>
@@ -55,6 +56,7 @@
                 style="@style/ClassMessageCommon"
                 android:text="班级号码"/>
             <TextView
+                android:id="@+id/tx_classNumber"
                style="@style/ClassMessageCommon"
                 android:text="10003483"
                 android:textColor="#FFFFFF"
@@ -68,6 +70,7 @@
                 style="@style/ClassMessageCommon"
                 android:text="老师姓名"/>
             <TextView
+                android:id="@+id/tx_techerName"
                 style="@style/ClassMessageCommon"
                 android:text="刘一手"
                 android:textColor="#FFFFFF"
@@ -81,6 +84,7 @@
                 style="@style/ClassMessageCommon"
                 android:text="班级成员"/>
             <TextView
+                android:id="@+id/tx_classMember"
                 style="@style/ClassMessageCommon"
                 android:text="56人"
                 android:textColor="#FFFFFF"
@@ -94,6 +98,7 @@
                 style="@style/ClassMessageCommon"
                 android:text="学校名称"/>
             <TextView
+                android:id="@+id/tx_schoolName"
                 style="@style/ClassMessageCommon"
                 android:text="绵阳中学"
                 android:textColor="#FFFFFF"
@@ -107,6 +112,7 @@
                 style="@style/ClassMessageCommon"
                 android:text="你的姓名"/>
             <EditText
+                android:id="@id/ed_relname"
                 style="@style/ClassMessageCommon"
                 android:hint="请输入你的真实姓名"
                 android:textColorHint="@color/colorCommon"
@@ -116,6 +122,7 @@
                 />
         </LinearLayout>
             <Button
+                android:id="@+id/bt_joinClass_button"
                 style="@style/ButtonCommon"
                 android:text="加入班级"
                 android:onClick="joinBasepage"/>
