--- a/yxyl/app/src/main/res/layout/activity_complete_message.xml
+++ b/yxyl/app/src/main/res/layout/activity_complete_message.xml
@@ -15,15 +15,18 @@
             style="@style/TitleCommon"
             >
             <ImageView
+                android:id="@+id/iv_back"
                 style="@style/CancelOrBackCommon"
                 />
             <TextView
+                android:id="@+id/tx_tile"
                 android:text="完善资料"
                 style="@style/TitleTextCommon"/>
 
         </RelativeLayout>
 
         <ImageView
+            android:id="@+id/iv_completeMessage"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:background="@color/colorAccent"
@@ -39,9 +42,11 @@
                 style="@style/MylayoutCommon"
                 android:background="@drawable/top_round_corners_5dp">
                 <TextView
+                    android:id="@+id/tx_name"
                     style="@style/ClassMessageCommon"
                     android:text="姓名"/>
                 <EditText
+                    android:id="@+id/ed_relname"
                     style="@style/PassCommon"
                     android:hint="请输入真实姓名"
                     android:textColor="#FFFFFF"
@@ -54,6 +59,7 @@
                 android:layout_marginTop="1dp"
                 android:onClick="chooseRegion">
                 <TextView
+                    android:id="@+id/tx_school"
                     style="@style/ClassMessageCommon"
                     android:text="学校"/>
 
@@ -69,6 +75,7 @@
                 android:layout_marginTop="1dp"
                 android:onClick="chooseSection">
                 <TextView
+                    android:id="@+id/tx_section"
                     style="@style/ClassMessageCommon"
                     android:text="学段"
                   />
@@ -78,6 +85,7 @@
                     android:layout_marginLeft="210dp"/>
             </LinearLayout>
             <Button
+                android:id="@+id/bt_commit_button"
                 style="@style/ButtonCommon"
                 android:text="提交" />
         </LinearLayout>
