--- a/yxyl/app/src/main/res/layout/activity_forget_password.xml
+++ b/yxyl/app/src/main/res/layout/activity_forget_password.xml
@@ -17,16 +17,18 @@
 
             >
             <ImageView
+                android:id="@+id/iv_back"
                style="@style/CancelOrBackCommon"
                 />
             <TextView
-                android:id="@+id/text"
+                android:id="@+id/tx_title"
                 android:text="忘记密码？"
                 style="@style/TitleTextCommon"/>
 
         </RelativeLayout>
 
         <ImageView
+            android:id="@+id/iv_forgetPassword"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:background="@color/colorAccent"
@@ -42,7 +44,7 @@
                 android:background="@drawable/top_round_corners_5dp"
                 >
                 <EditText
-                    android:id="@+id/moblie_number"
+                    android:id="@+id/ed_moblie_number"
                     android:layout_width="269dp"
                     android:layout_height="match_parent"
                     android:hint="请输入绑定或者注册的手机号"
@@ -54,6 +56,7 @@
                     android:maxLength="11"
                     android:inputType="number"/>
                 <ImageView
+                    android:id="@+id/iv_clear_moblienumber"
                     style="@style/DeltextbuttonCommon"/>
             </LinearLayout>
             <LinearLayout
@@ -62,13 +65,14 @@
                 android:background="@drawable/botton_round_corners_5dp"
                 >
                 <EditText
-                    android:id="@+id/verfication_number"
+                    android:id="@+id/ed_verfication_number"
                     style="@style/CodeCommon"/>
                 <TextView
                     android:layout_width="1dp"
                     android:layout_height="18dp"
                     android:background="@color/colorCommon"/>
                 <TextView
+                    android:id="@+id/tx_getCodenumber"
                     android:layout_width="80dp"
                     android:layout_height="wrap_content"
                     android:text="获取验证码"
@@ -78,7 +82,7 @@
             </LinearLayout>
 
             <Button
-                android:id="@+id/nextstep_botton"
+                android:id="@+id/bt_nextstep_botton"
                 style="@style/ButtonCommon"
                 android:text=" 下一步"
                 android:onClick="ReSetpassword"/>
