--- a/yxyl/app/src/main/res/layout/activity_login.xml
+++ b/yxyl/app/src/main/res/layout/activity_login.xml
@@ -17,15 +17,17 @@
 
     >
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/to_login_toolbar"
         style="@style/TitleCommon">
         <TextView
+            android:id="@+id/tx_title_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="生如夏花"/>
     </android.support.v7.widget.Toolbar>
 
     <ImageView
+        android:id="@+id/iv_login"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:background="@color/colorAccent"
@@ -41,7 +43,7 @@
             style="@style/MylayoutCommon"
             android:background="@drawable/top_round_corners_5dp">
             <EditText
-                android:id="@+id/login_name"
+                android:id="@+id/ed_login_name"
                 android:layout_width="269dp"
                 android:layout_height="match_parent"
                 android:hint="请输入账号或者手机号"
@@ -53,7 +55,7 @@
                 android:maxLength="16"
                 />
             <ImageView
-                android:id="@+id/delmoblie_button"
+                android:id="@+id/iv_loginname_clear"
                 style="@style/DeltextbuttonCommon"
                 />
         </LinearLayout>
@@ -62,19 +64,20 @@
             android:layout_marginTop="1dp"
             android:background="@drawable/botton_round_corners_5dp">
             <EditText
-                android:id="@+id/login_password"
+                android:id="@+id/ed_login_password"
                 style="@style/PassCommon"
                 android:hint="请输入密码"
 
                 />
             <ImageView
-                android:id="@+id/visible_pass"
+                android:id="@+id/iv_cipher"
                 style="@style/DeltextbuttonCommon">
 
             </ImageView>
 
         </LinearLayout>
         <Button
+            android:id="@+id/bt_login"
             style="@style/ButtonCommon"
             android:text="登 录"
             android:onClick="loginSuccess"
@@ -87,6 +90,7 @@
             android:layout_gravity="center_horizontal"
             >
         <TextView
+            android:id="@+id/tx_forgetPass"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="忘记密码？"
@@ -96,6 +100,7 @@
             android:onClick="forgetPass"
             />
         <TextView
+            android:id="@+id/tx_register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="快速注册!"
