--- a/yxyl/app/src/main/res/layout/activity_reset_password.xml
+++ b/yxyl/app/src/main/res/layout/activity_reset_password.xml
@@ -16,16 +16,19 @@
             style="@style/TitleCommon"
             >
             <ImageView
+                android:id="@+id/iv_back"
                 style="@style/CancelOrBackCommon"
 
                 />
             <TextView
+                android:id="@id/tx_title"
                 android:text="重置密码"
                 style="@style/TitleTextCommon"/>
 
         </RelativeLayout>
 
         <ImageView
+            android:id="@+id/iv_resetPassword"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:background="@color/colorAccent"
@@ -41,7 +44,7 @@
                 android:background="@drawable/top_round_corners_5dp"
                 >
                 <EditText
-                    android:id="@+id/first_passnumber"
+                    android:id="@+id/ed_first_passnumber"
                     style="@style/PassCommon"
                     />
                 <ImageView
@@ -53,7 +56,7 @@
                 android:layout_marginTop="1dp"
                 >
                 <EditText
-                    android:id="@+id/second_passnumber"
+                    android:id="@+id/ed_second_passnumber"
                     style="@style/PassCommon"
                     android:hint="请再次输入密码"
                     />
@@ -63,7 +66,7 @@
 
 
             <Button
-                android:id="@+id/sure_reset_botton"
+                android:id="@+id/bt_sure_reset_botton"
                 style="@style/ButtonCommon"
                 android:text=" 确认重置"
 
