--- a/yxyl/app/src/main/res/values/region_item_styles.xml
+++ b/yxyl/app/src/main/res/values/region_item_styles.xml
@@ -10,9 +10,9 @@
         <item name="android:layout_marginLeft">15dp</item>
         <item name="android:layout_marginRight">20dp</item>
         <item name="android:textSize">14dp</item>
-        <item name="android:textColor">#666666</item>
+        <item name="android:textColor">#3a666666</item>
         <item name="android:layout_gravity">center_vertical</item>
-        <item name="android:gravity">center_vertical</item>
+        <item name="android:gravity">center</item>
         <item name="android:layout_marginTop">20dp</item>
     </style>
 </resources>
