--- a/yxyl/app/src/main/res/layout/activity_choose_region.xml
+++ b/yxyl/app/src/main/res/layout/activity_choose_region.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="yanxiu.com.yxyl.ChooseRegion">
+    tools:context="yanxiu.com.yxyl.ChooseRegionActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
