--- a/yxyl/app/src/main/res/layout/activity_choose_school.xml
+++ b/yxyl/app/src/main/res/layout/activity_choose_school.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="yanxiu.com.yxyl.ChooseSchool">
+    tools:context="yanxiu.com.yxyl.ChooseSchoolActivity">
 
 </android.support.constraint.ConstraintLayout>
