--- a/yxyl/app/src/main/res/layout/activity_login.xml
+++ b/yxyl/app/src/main/res/layout/activity_login.xml
@@ -58,6 +58,7 @@
             <ImageView
                 android:id="@+id/iv_loginname_clear"
                 style="@style/DeltextbuttonCommon"
+                android:visibility="invisible"
                 />
         </LinearLayout>
         <LinearLayout
@@ -82,6 +83,7 @@
             style="@style/ButtonCommon"
             android:text="登 录"
             android:onClick="loginSuccess"
+            android:enabled="false"
             />
     </LinearLayout>
         <RelativeLayout
