--- a/yxyl/app/src/main/res/values/colors.xml
+++ b/yxyl/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorCommon">#89e00d</color>
     <color name="colorMyLayoutCommon">#69ad0a</color>
+    <color name="colorButtonOClick">#c2FFFFFF</color>
 
 </resources>
