矩形、圆、线、环

--- a/yxyl/app/src/main/res/layout/activity_login.xml
+++ b/yxyl/app/src/main/res/layout/activity_login.xml
@@ -84,6 +84,7 @@
             android:text="登 录"
             android:onClick="loginSuccess"
             android:enabled="false"
+            android:background="@drawable/selector_sendbtn_bg"
             />
     </LinearLayout>
         <RelativeLayout
