--- a/yxyl/app/src/main/res/drawable/shap_send_enabled_bg.xml
+++ b/yxyl/app/src/main/res/drawable/shap_send_enabled_bg.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-
     <corners
-       android:radius="6dp">
+        android:radius="6dp"
+        >
     </corners>
-    <solid android:color="#69ad0a">
+    <solid android:color="#FFFFFF">
     </solid>
+
 </shape>
