--- a/learnStyle/app/src/main/res/layout/activity_oval_style.xml
+++ b/learnStyle/app/src/main/res/layout/activity_oval_style.xml
@@ -42,12 +42,23 @@
         android:background="@drawable/bg_oval_with_storke_dash"
 
         />
-
+    <CheckBox
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_checkbox_selector"
+       />
+    <EditText
+        android:layout_marginTop="10dp"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:textColor="@color/text_btn_selector"/>
     <Button
         android:id="@+id/bt_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="线线style点这"
+        android:textColor="@color/text_btn_selector"
         />
 
 
