--- a/learnStyle/app/src/main/res/layout/activity_ring_style.xml
+++ b/learnStyle/app/src/main/res/layout/activity_ring_style.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical"
     android:gravity="center_horizontal">
 
+
     <ImageView
         android:id="@+id/ring_1"
         android:layout_width="50dp"
@@ -44,9 +45,15 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@drawable/bg_ring_stroke_gradient_rotate"
-
+        android:visibility="visible"
 
         />
+    <TextView
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:text="好好玩"
+        android:gravity="center"
+        android:background="@drawable/bg_btn_rectangle_layer_list"/>
 
     <Button
         android:id="@+id/bt_view"
@@ -54,6 +61,8 @@
         android:layout_height="wrap_content"
         android:text="线线style点这"
         />
+
+
 
 
 </LinearLayout>
