--- a/yxyl/app/src/main/res/layout/activity_login.xml
+++ b/yxyl/app/src/main/res/layout/activity_login.xml
@@ -8,8 +8,8 @@
     android:layout_height="match_parent"
     android:background="@color/colorCommon"
     >
-
 <LinearLayout
+    android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -71,11 +71,13 @@
                 android:hint="请输入密码"
 
                 />
-            <ImageView
+            <CheckBox
                 android:id="@+id/iv_cipher_loginPassword"
-                style="@style/DeltextbuttonCommon">
+                style="@style/DeltextbuttonCommon"
+                android:checked="false"
+                android:button="@null">
 
-            </ImageView>
+            </CheckBox>
 
         </LinearLayout>
         <Button
