--- a/yxyl/app/src/main/res/drawable/textview_boder.xml
+++ b/yxyl/app/src/main/res/drawable/textview_boder.xml
@@ -8,7 +8,7 @@
     </solid>
     <stroke
         android:width="2dp"
-        android:color="#89e00d"
+        android:color="#89e00d"s
         >
     </stroke>
 
